# water-reashercher

./: README.md  pyproject.toml
src/: cli.py
src/search/: base.py  gemma.py  gpt.py  groq.py  openai_search_provider.py  response_verifier.py
